@@ -1,7 +1,6 @@
 package project.testmaster.backend.utils;
 
-import java.nio.file.Files;
-import java.nio.file.Paths;
+import java.io.InputStream;
 import java.security.KeyFactory;
 import java.security.PrivateKey;
 import java.security.PublicKey;
@@ -10,6 +9,8 @@ import java.security.spec.X509EncodedKeySpec;
 import java.time.Instant;
 import java.util.Base64;
 import java.util.Date;
+
+import org.springframework.core.io.ClassPathResource;
 
 import io.jsonwebtoken.Claims;
 import io.jsonwebtoken.Jwts;
@@ -26,22 +27,28 @@ public class JwtUtils {
     }
 
     private PrivateKey loadPrivateKeyFromPem(String filePath) throws Exception {
-        String key = new String(Files.readAllBytes(Paths.get(filePath)));
+        InputStream inputStream = new ClassPathResource(filePath).getInputStream();
+        String key = new String(inputStream.readAllBytes());
+
         key = key.replace("-----BEGIN PRIVATE KEY-----", "")
                 .replace("-----END PRIVATE KEY-----", "")
                 .replaceAll("\\s", "");
         byte[] keyBytes = Base64.getDecoder().decode(key);
+
         PKCS8EncodedKeySpec spec = new PKCS8EncodedKeySpec(keyBytes);
         KeyFactory keyFactory = KeyFactory.getInstance("RSA");
         return keyFactory.generatePrivate(spec);
     }
 
     private PublicKey loadPublicKeyFromPem(String filePath) throws Exception {
-        String key = new String(Files.readAllBytes(Paths.get(filePath)));
+        InputStream inputStream = new ClassPathResource(filePath).getInputStream();
+        String key = new String(inputStream.readAllBytes
+        ());
         key = key.replace("-----BEGIN PUBLIC KEY-----", "")
                 .replace("-----END PUBLIC KEY-----", "")
                 .replaceAll("\\s", "");
         byte[] keyBytes = Base64.getDecoder().decode(key);
+        
         X509EncodedKeySpec spec = new X509EncodedKeySpec(keyBytes);
         KeyFactory keyFactory = KeyFactory.getInstance("RSA");
         return keyFactory.generatePublic(spec);
